<resources>
    <string name="app_name">AutoFreezeApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tab_text_1">UnFreeze</string>
    <string name="tab_text_2">Category</string>
    <string name="tab_text_3">Timer</string>
    <string name="edit_text_input_package_name_hint_text">Input package name</string>
    <string name="et_input_category_name_hint_text">Input category name</string>

<!--    fragment_applist-->
    <string name="fragment_applist_et_input_package_name_hint_text">Input package name</string>
    <string name="fragment_applist_btn_freeze_text">freeze</string>
    <string name="fragment_frozen_unfreezing_center_text">Unfreezing…</string>
    <string name="fragment_frozen_unfreeze_all_button_text">UNFREEZE ALL</string>
    <string name="message_waiting_dialog_text">Waiting…</string>
    <string name="fragment_applilst_selected_count_text">selected:</string>
    <string name="dialog_choose_category_tips_text">Please choose a category</string>
    <string name="dialog_choose_category_header_tips_text">CHOOSE CATEGORY</string>
    <string name="input_category_name_place_holder_text">Input Category Name</string>
    <string name="fragment_frozenapps_by_category_remove_snackbar_text">Remove apps from this category</string>
    <string name="undo_text">UNDO</string>
    <string name="unfreeze_button_text">UNFREEZE</string>
    <string name="freeze_button_text">FREEZE</string>
    <string name="start_time_edittext_hint">start time</string>
    <string name="end_time_edit_text_hint">end time</string>
    <string name="save_button_text">SAVE</string>
    <string name="back_button_text">BACK</string>
    <string name="fragment_add_timer_auto_freeze_header">AUTO FREEZE</string>
    <string name="text_view_from">FROM</string>
    <string name="text_view_to">TO</string>
    <string name="text_view_rename_text">RENAME</string>
    <string name="delete_button_text">DELETE</string>
    <string name="edittext_input_category_name_hint">Input Category Name</string>
    <string name="text_view_delete">DELETE</string>
    <string name="update_button_text">update</string>
    <string name="add_category_button_text">Add Category</string>
    <string name="add_apps_button_text">Add Apps</string>
    <string name="dialog_choose_category_you_can_create_new_one">You can create new one</string>
    <string name="dialog_choose_category_edit_text_new_category">new category</string>
    <string name="button_add_text">ADD</string>
    <string name="image_button_content_description_delete">Delete Image Button</string>
    <string name="imageview_content_description_visibility">visibility</string>
    <string name="dialog_confirm_deletion_text">Confirm deletion?</string>
    <string name="warning">WARNING</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="prompt_to_add_categories">You have not added the categories, please add first</string>
    <string name="add_category_success">Add category success!</string>
    <string name="save_success">save success</string>
    <string name="fragment_home_label">HOME</string>
    <string name="fragment_apps_by_category_label">Apps by category</string>
    <string name="fragment_edit_timer_label">Edit Tasker</string>
    <string name="fragment_add_timer_label">Add Tisker</string>
    <string name="textview_option">OPTION</string>
    <string name="checkBoxAddTimerIsLockScreen">lock screen</string>
    <string name="lock_screen_check_warning_text">Check this option, you will not be able to use the phone during the specified time! The phone will remain locked</string>
    <string name="fragment_add_edit_timer_description">Task description</string>
    <string name="image_description_application_s_logo_text">Application\'s logo</string>
    <string name="lock_screeen_image_description">lock_screeen_image_description</string>
    <string name="githubURL" translatable="false">https://github.com/tignioj/AutoFreezeApp</string>
    <string name="menu_home">Home</string>
    <string name="setting">Settings</string>
    <string name="nav_header_image_desc">Navgation header</string>
    <string name="nav_header_title">AutoFreezeApp</string>
    <string name="nav_header_subtitle" translatable="false">https://github.com/tignioj/AutoFreezeApp</string>
    <string name="action_settings">Settings</string>
    <string name="cell_rcv_fragment_setting_imageview_content_description">Setting Fragment Cell ImageView</string>
    <string name="setting_item_deactive_text">Deactivate</string>
    <string name="setting_toggle_night_mode_text">Toggle night mode</string>
    <string name="please_activate_alert_title">Please activate it</string>
    <string name="check_link_buton_text">see the tutorial</string>
    <string name="exit_text">exit</string>
    <string name="activate_tips">Please activate it, detail: https://github.com/tignioj/AutoFreezeApp</string>
    <string name="confirm_deactive_tips">CONFIRM DEACTIVATE? If you want to re-activate, you need to run command set device owner again, You can manually uninstall the software after deactivation.</string>
    <string name="nav_header_desc">Sidebar header image</string>
    <string name="develpoe_other_apps">Developer\'s other applications</string>
    <string name="tips_text">TIPS</string>
    <string name="open_ousite_url_text">Do you want to view the links \"https://github.com/tignioj/TimeLineApp\" ?</string>
    <string name="fragment_setting_label">Settings</string>
    <string name="githubOtherAppsURL" translatable="false">https://github.com/tignioj/TimeLineApp</string>
    <string name="unfreeze_text" translatable="false">Unfreeze</string>
    <string name="application_text" translatable="false">application</string>
    <string name="fragment_setting_editable_tasker_label">Program Lock</string>
    <string name="enable">Enable</string>
    <string name="tasker_modifiable_time">Application available  time.</string>
    <string name="locked_text">locked</string>
    <string name="edit_limit_tips">The program has been locked and can only be opened within the specified time</string>
    <string name="program_lock">Program Lock</string>
    <string name="enable_state_text_enabled">enabled</string>
    <string name="enable_state_text_off">off</string>
    <string name="program_lock_warning_text">When enabled, the application will only can be opened for a specified time! Please think twice</string>
    <string name="giveup_message_alert_title">Believe that setbacks will pass</string>
    <string name="giveup_message_alert_message">I hope you will get better soon.</string>
    <string name="forbid_giveup_message_alert_title">You can\'t give up!</string>
    <string name="forbid_giveup_message_alert_message">Be patient</string>
    <string name="button_i_give_up_text">I give up</string>
    <string name="button_calm_text">I need calm down 5 minutes</string>
    <string name="channel_name_keep_running">Service Keep Running</string>
    <string name="channel_description_keep_running">keep running</string>
    <string name="checkbox_hide_icon_text">Hide icon</string>
    <string name="warning_hide_icon_tips">You won\'t be able to see the icon from desktop when not in specifid time!</string>
    <string name="calmdown_end_text">Calm down end</string>
    <string name="notifaction_keep_running_title">AutoFreezeApp Keep Running</string>
    <string name="notification_access_time">Access time:</string>
</resources>
