<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.TaskerEditableFragment">

    <Button
        android:id="@+id/btn_editable_tasker_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_editable_tasker_cancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/btn_editable_tasker_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button_text"
        app:layout_constraintBottom_toBottomOf="@+id/btn_editable_tasker_confirm"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_editable_tasker_confirm"
        app:layout_constraintTop_toTopOf="@+id/btn_editable_tasker_confirm" />


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_to"
        app:layout_constraintBottom_toBottomOf="@+id/et_editable_dialog_start_time"
        app:layout_constraintEnd_toStartOf="@+id/et_editable_dialog_end_time"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/et_editable_dialog_start_time"
        app:layout_constraintTop_toTopOf="@+id/et_editable_dialog_start_time" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_from"
        app:layout_constraintBottom_toTopOf="@+id/btn_editable_tasker_confirm"
        app:layout_constraintEnd_toStartOf="@+id/et_editable_dialog_start_time"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_editable_enable" />

    <EditText
        android:id="@+id/et_editable_dialog_start_time"
        android:layout_width="80sp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:hint="@string/start_time_edittext_hint"
        android:inputType="textPersonName"
        android:longClickable="false"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <EditText
        android:id="@+id/et_editable_dialog_end_time"
        android:layout_width="80sp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:hint="@string/end_time_edit_text_hint"
        android:inputType="textPersonName"
        android:longClickable="false"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/tv_editable_dialog_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tasker_modifiable_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkbox_editable_enable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/checkbox_editable_hideicon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_editable_dialog_header" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="45dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="26dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="26dp" />

    <CheckBox
        android:id="@+id/checkbox_editable_hideicon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_hide_icon_text"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox_editable_enable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkbox_editable_enable"
        app:layout_constraintTop_toTopOf="@+id/checkbox_editable_enable" />

    <ProgressBar
        android:id="@+id/progressBarHideInSetting"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/et_editable_dialog_start_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_editable_enable" />

    <TextView
        android:id="@+id/textViewWaitingInSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_waiting_dialog_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarHideInSetting" />

</androidx.constraintlayout.widget.ConstraintLayout>