<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/lockStateFragment">

    <fragment
        android:id="@+id/appListFragment"
        android:name="com.tignioj.freezeapp.ui.home.applist.AppListFragment"
        android:label="fragment_app_list"
        tools:layout="@layout/fragment_app_list" />
    <fragment
        android:id="@+id/frozenFragment"
        android:name="com.tignioj.freezeapp.ui.home.frozen.FrozenFragment"
        android:label="fragment_frozen"
        tools:layout="@layout/fragment_frozen" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.tignioj.freezeapp.ui.setting.SettingFragment"
        android:label="@string/fragment_setting_label"
        tools:layout="@layout/fragment_setting" >
        <action
            android:id="@+id/action_nav_setting_to_taskerEditableFragment"
            app:destination="@id/taskerEditableFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_home"
        android:name="com.tignioj.freezeapp.ui.home.HomeFragment"
        android:label="@string/fragment_home_label"
        tools:layout="@layout/fragment_home"
        app:startDestination="@id/action_nav_home_to_lockStateFragment">
        <action
            android:id="@+id/action_homeFragment_to_settingFragment"
            app:destination="@id/nav_setting" />
        <action
            android:id="@+id/action_homeFragment_to_addTimerFragment"
            app:destination="@id/addTimerFragment" />
        <action
            android:id="@+id/action_homeFragment_to_frozenAppByCategoryFragment"
            app:destination="@id/frozenAppByCategoryFragment" />
        <action
            android:id="@+id/action_homeFragment_to_freezeTimerEditFragment"
            app:destination="@id/freezeTimerEditFragment" />
        <action
            android:id="@+id/action_nav_home_to_lockStateFragment"
            app:destination="@id/lockStateFragment"
            app:popUpTo="@+id/lockStateFragment"
            app:popUpToInclusive="true"
            />
    </fragment>
    <fragment
        android:id="@+id/addTimerFragment"
        android:name="com.tignioj.freezeapp.ui.home.timer.AddTimerFragment"
        android:label="@string/fragment_add_timer_label"
        tools:layout="@layout/fragment_add_timer" />
    <fragment
        android:id="@+id/frozenAppByCategoryFragment"
        android:name="com.tignioj.freezeapp.ui.home.frozen.category.FrozenAppByCategoryFragment"
        android:label="@string/fragment_apps_by_category_label"
        tools:layout="@layout/fragment_frozen_app_by_category" />
    <fragment
        android:id="@+id/freezeTimerEditFragment"
        android:name="com.tignioj.freezeapp.ui.home.timer.FreezeTimerEditFragment"
        android:label="@string/fragment_edit_timer_label"
        tools:layout="@layout/fragment_edit_timer" />
    <fragment
        android:id="@+id/taskerEditableFragment"
        android:name="com.tignioj.freezeapp.ui.setting.TaskerEditableFragment"
        android:label="@string/fragment_setting_editable_tasker_label"
        tools:layout="@layout/fragment_editable_time" >
        <action
            android:id="@+id/action_taskerEditableFragment_to_lockStateFragment"
            app:destination="@id/lockStateFragment"
            app:popUpTo="@+id/lockStateFragment"
            app:popUpToInclusive="true"
            />
    </fragment>
    <fragment
        android:id="@+id/lockStateFragment"
        android:name="com.tignioj.freezeapp.ui.lockstate.LockStateFragment"
        android:label="fragment_lock_state"
        tools:layout="@layout/fragment_lock_state" >
        <action
            android:id="@+id/action_lockStateFragment_to_nav_home"
            app:destination="@id/nav_home"
            />
    </fragment>
</navigation>